--- a/web/bex.html
+++ b/web/bex.html
@@ -11,7 +11,9 @@
     <div class="panelbextable">
       <x-bextable></x-bextable>
     </div>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="application/dart" src="model.dart"></script>
     <script src="packages/browser/dart.js"></script>
+    <script src="packages/browser/interop.js"></script>
   </body>
 </html>
