--- a/web/bex.html
+++ b/web/bex.html
@@ -5,13 +5,15 @@
     <meta charset="utf-8">
     <title>Relatório Bex</title>
     <link rel="stylesheet" href="bex.css">
-    <link rel="import" href="x-bextable.html">
+    <link rel="import" href="x-bextable.html">    
   </head>
   <body>    
     <div class="panelbextable">
       <x-bextable></x-bextable>
     </div>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="packages/Downloadify/swfobject.js"></script>
+    <script type="text/javascript" src="packages/Downloadify/downloadify.min.js"></script>
     <script type="application/dart" src="model.dart"></script>
     <script src="packages/browser/dart.js"></script>
     <script src="packages/browser/interop.js"></script>
